--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,26 +82,36 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
 
-        <!--游戏详情-->
+        <!-- 游戏详情 -->
         <activity
             android:name=".ui.activity.GameDetailsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
 
         <!-- 文章详情 -->
-        <activity android:name=".ui.activity.NewsDetailsActivity"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".ui.activity.NewsDetailsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"/>
 
         <!-- 视频详情 -->
-        <activity android:name=".ui.activity.VideoDetailsActivity"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".ui.activity.VideoDetailsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"/>
 
-        <!--论坛详情-->
-        <activity android:name=".ui.activity.ForumDetailsActivity"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme"/>
+        <!-- 论坛详情 -->
+        <activity
+            android:name=".ui.activity.ForumDetailsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"/>
+
+
+        <activity
+            android:name=".WebDetailsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            />
 
         <receiver android:name=".receiver.BootCompletedReceiver">
             <intent-filter>
