--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,18 +47,20 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':core')
     //for okhttputils
-    compile 'com.zhy:okhttputils:2.6.2'
     //for xbanner
-    compile 'com.xhb:xbanner:1.3.0'
     //for jpush
-    compile 'cn.jiguang:jpush:2.1.9'
     //for umeng
-    compile 'com.umeng.analytics:analytics:latest.integration'
     //for bugly
+    //for dialog
+    //for recyclerview
+    compile 'com.zhy:okhttputils:2.6.2'
+    compile 'com.xhb:xbanner:1.3.0'
+    compile 'cn.jiguang:jpush:2.1.9'
+    compile 'com.umeng.analytics:analytics:latest.integration'
     compile 'com.tencent.bugly:crashreport_upgrade:latest.release'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
-    //for dialog
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.2.2@aar'
-    //for recyclerview
     compile 'com.jude:easyrecyclerview:4.4.2'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
