游戏详情页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,12 +106,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
 
-
         <activity
             android:name=".WebDetailsActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            />
+            android:theme="@style/AppTheme" />
 
         <receiver android:name=".receiver.BootCompletedReceiver">
             <intent-filter>
