--- a/core/build.gradle
+++ b/core/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
     //butterknife
     compile 'com.jakewharton:butterknife:7.0.1'
     //圆角图片
