--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -215,6 +215,12 @@
             android:name="UMENG_CHANNEL"
             android:value="${CHANNEL}"/>
 
+        <meta-data android:name="IFLYTEK_CHANNEL" android:value="${CHANNEL}" >
+        </meta-data>
+
+        <meta-data  android:name="IFLYTEK_APPKEY"  android:value="'57f99c49'" >
+        </meta-data>
+
         <!-- 友盟相关配置 -->
 
 
