--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,9 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
-.DS_Store
 /build
 /captures
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
-/keystore.properties
+keystore.properties
 .idea/gradle.xml
 app/app-tencent-release.apk
 app/app-wandoujia-release.apk
