--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ android {
         }
 
         debug{
-            minifyEnabled false //是否混淆
+            minifyEnabled false
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -74,6 +74,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':core')
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.xhb:xbanner:1.3.0'
     compile 'cn.jiguang:jpush:2.1.9'
@@ -82,6 +83,4 @@ dependencies {
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.2.2@aar'
     compile 'com.jude:easyrecyclerview:4.4.2'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
