--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,16 +2,13 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
     buildTypes {
         release {
@@ -30,6 +27,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    //okhttp
+    compile 'com.zhy:okhttputils:2.6.2'
     //butterknife
     compile 'com.jakewharton:butterknife:7.0.1'
     //圆角图片
@@ -40,4 +39,10 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     //状态栏工具类
     compile 'com.jaeger.statusbaruitl:library:1.3.6'
+    //umeng
+    compile 'com.umeng.analytics:analytics:latest.integration'
+    //bugly
+    compile 'com.tencent.bugly:crashreport_upgrade:latest.release'
+    compile 'com.tencent.bugly:nativecrashreport:latest.release'
+
 }
