--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'com.android.application'
-def keyStoreFile = rootProject.file("keystore.properties")
-def keyStoreProperties = new Properties()
-keyStoreProperties.load(new FileInputStream(keyStoreFile))
+apply from: "$rootDir/config.gradle"
 
 android {
     compileSdkVersion 25
@@ -24,21 +22,23 @@ android {
                 JPUSH_APPKEY : "1d606486b7fd03d82a683ecd", //JPush上注册的包名对应的appkey.
                 JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
         ]
+        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
+
     }
 
     //签名信息配置
     signingConfigs {
         debug {
-            storeFile file(keyStoreProperties['storeFile'])
-            storePassword keyStoreProperties['storePassword']
-            keyAlias keyStoreProperties['keyAlias']
-            keyPassword keyStoreProperties['keyPassword']
+            storeFile file(appConfig.storeFile)
+            storePassword appConfig.storePassWord
+            keyAlias appConfig.keyAlias
+            keyPassword appConfig.keyPassWord
         }
         release {
-            storeFile file(keyStoreProperties['storeFile'])
-            storePassword keyStoreProperties['storePassword']
-            keyAlias keyStoreProperties['keyAlias']
-            keyPassword keyStoreProperties['keyPassword']
+            storeFile file(appConfig.storeFile)
+            storePassword appConfig.storePassWord
+            keyAlias appConfig.keyAlias
+            keyPassword appConfig.keyPassWord
         }
     }
 
@@ -49,7 +49,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
-        debug{
+        debug {
             minifyEnabled false
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
