--- a/core/build.gradle
+++ b/core/build.gradle
@@ -49,5 +49,7 @@ dependencies {
     //bugly
     compile 'com.tencent.bugly:crashreport_upgrade:latest.release'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
-
+    //dagger2
+    compile 'com.google.dagger:dagger:2.14.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
 }
