--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,49 +45,49 @@
 
         <!-- 设置页面 -->
         <activity
-            android:name=".mvp.view.activity.SettingActivity"
+            android:name=".mvp.ui.activity.SettingActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
         <!-- 关于页面 -->
         <activity
-            android:name=".mvp.view.activity.AboutActivity"
+            android:name=".mvp.ui.activity.AboutActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
         <!-- 登录页面 -->
         <activity
-            android:name=".mvp.view.activity.LoginActivity"
+            android:name=".mvp.ui.activity.LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
         <!-- 注册页面 -->
         <activity
-            android:name=".mvp.view.activity.RegisterActivity"
+            android:name=".mvp.ui.activity.RegisterActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
         <!-- 游戏详情 -->
         <activity
-            android:name=".mvp.view.activity.GameDetailsActivity"
+            android:name=".mvp.ui.activity.GameDetailsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
         <!-- 文章详情 -->
         <activity
-            android:name=".mvp.view.activity.NewsDetailsActivity"
+            android:name=".mvp.ui.activity.NewsDetailsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
         <!-- 视频详情 -->
         <activity
-            android:name=".mvp.view.fragment.VideoDetailsFragment"
+            android:name=".mvp.ui.fragment.VideoDetailsFragment"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
         <!-- 论坛详情 -->
         <activity
-            android:name=".mvp.view.activity.ForumListActivity"
+            android:name=".mvp.ui.activity.ForumListActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
