--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,32 +29,32 @@ android {
 
     }
 
-    //签名信息配置
-    signingConfigs {
-        debug {
-            storeFile file(appConfig.storeFile)
-            storePassword appConfig.storePassWord
-            keyAlias appConfig.keyAlias
-            keyPassword appConfig.keyPassWord
-        }
-        release {
-            storeFile file(appConfig.storeFile)
-            storePassword appConfig.storePassWord
-            keyAlias appConfig.keyAlias
-            keyPassword appConfig.keyPassWord
-        }
-    }
+//    //签名信息配置
+//    signingConfigs {
+//        debug {
+//            storeFile file(appConfig.storeFile)
+//            storePassword appConfig.storePassWord
+//            keyAlias appConfig.keyAlias
+//            keyPassword appConfig.keyPassWord
+//        }
+//        release {
+//            storeFile file(appConfig.storeFile)
+//            storePassword appConfig.storePassWord
+//            keyAlias appConfig.keyAlias
+//            keyPassword appConfig.keyPassWord
+//        }
+//    }
 
     buildTypes {
         release {
             minifyEnabled false //是否混淆
-            signingConfig signingConfigs.release
+//            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
         debug {
             minifyEnabled false
-            signingConfig signingConfigs.release
+//            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
