--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply from: "$rootDir/config.gradle"
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.stx.xhb.dmgameapp"
         minSdkVersion 15
@@ -78,8 +78,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':core')
-    compile 'com.xhb:xbanner:1.3.8'
-    compile 'com.jude:easyrecyclerview:4.4.2'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':core')
+    implementation 'com.xhb:xbanner:1.3.8'
+    implementation 'com.jude:easyrecyclerview:4.4.2'
+    //基于Rxjava+Retrofit封装的网络请求框架
+    implementation 'io.reactivex:rxandroid:1.2.0'
+    implementation 'io.reactivex:rxjava:1.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
 }
