--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 15
@@ -24,29 +24,29 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'com.android.support:recyclerview-v7:25.4.0'
-    compile 'com.android.support:design:25.4.0'
-    compile 'com.android.support:cardview-v7:25.4.0'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.android.support:appcompat-v7:25.4.0'
+    api 'com.android.support:recyclerview-v7:25.4.0'
+    api 'com.android.support:design:25.4.0'
+    api 'com.android.support:cardview-v7:25.4.0'
+    api 'com.google.code.gson:gson:2.8.0'
+    api 'com.android.support:multidex:1.0.1'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
     //okhttp
-    compile 'com.zhy:okhttputils:2.6.2'
+    api 'com.zhy:okhttputils:2.6.2'
     //butterknife
-    compile 'com.jakewharton:butterknife:7.0.1'
+    api 'com.jakewharton:butterknife:7.0.1'
     //圆角图片
-    compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+    api 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
     //多状态视图
-    compile 'com.classic.common:multiple-status-view:1.2'
+    api 'com.classic.common:multiple-status-view:1.2'
     //glide
-    compile 'com.github.bumptech.glide:glide:3.8.0'
+    api 'com.github.bumptech.glide:glide:3.8.0'
     //状态栏工具类
-    compile 'com.jaeger.statusbaruitl:library:1.3.6'
+    api 'com.jaeger.statusbaruitl:library:1.3.6'
     //umeng
-    compile 'com.umeng.analytics:analytics:latest.integration'
+    api 'com.umeng.analytics:analytics:latest.integration'
     //bugly
-    compile 'com.tencent.bugly:crashreport_upgrade:latest.release'
-    compile 'com.tencent.bugly:nativecrashreport:latest.release'
+    api 'com.tencent.bugly:crashreport_upgrade:latest.release'
+    api 'com.tencent.bugly:nativecrashreport:latest.release'
 }
