--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,5 @@ dependencies {
     implementation project(':core')
     implementation 'com.xhb:xbanner:1.3.8'
     implementation 'com.jude:easyrecyclerview:4.4.2'
+    implementation files('libs/GDTUnionSDK.TBS.4.19.574.min.jar')
 }
