--- a/core/build.gradle
+++ b/core/build.gradle
@@ -30,13 +30,13 @@ dependencies {
     api 'com.android.support:design:27.1.1'
     api 'com.android.support:cardview-v7:27.1.1'
     api 'com.android.support:multidex:1.0.3'
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.40'
     //okhttp
     api 'com.zhy:okhttputils:2.6.2'
     //butterknife
     api 'com.jakewharton:butterknife:7.0.1'
     //圆角图片
-    api 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+    api 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
     //多状态视图
     api 'com.classic.common:multiple-status-view:1.2'
     //glide
@@ -44,16 +44,16 @@ dependencies {
     //状态栏工具类
     api 'com.jaeger.statusbaruitl:library:1.3.6'
     //umeng
-    api 'com.umeng.analytics:analytics:latest.integration'
+    api 'com.umeng.analytics:analytics:6.1.4'
     //bugly
-    api 'com.tencent.bugly:crashreport_upgrade:latest.release'
-    api 'com.tencent.bugly:nativecrashreport:latest.release'
+    api 'com.tencent.bugly:crashreport_upgrade:1.3.6'
+    api 'com.tencent.bugly:nativecrashreport:3.6.0'
     //基于Rxjava+Retrofit封装的网络请求框架
     api 'io.reactivex:rxandroid:1.2.1'
     api 'io.reactivex:rxjava:1.3.0'
-    api 'com.squareup.retrofit2:retrofit:2.4.0'
-    api 'com.squareup.retrofit2:converter-gson:2.4.0'
-    api 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
+    api 'com.squareup.retrofit2:retrofit:2.5.0'
+    api 'com.squareup.retrofit2:converter-gson:2.5.0'
+    api 'com.squareup.retrofit2:adapter-rxjava:2.5.0'
     api 'com.google.code.gson:gson:2.8.2'
-    api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    api 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 }
